implement mark entry
